test/libsolidity/syntaxTests/abstract/library.sol
abstract library A { }
// ----
// TypeError: (0-22): Libraries cannot be abstract.
